fix icons in feed list having wrong z-index

--- a/viewer/static/less/main.less
+++ b/viewer/static/less/main.less
@@ -95,7 +95,7 @@ html, body, body>div.container {
 			height:14px
 		}
 		& .glyphicon {
-			z-index:-5;
+			z-index:0;
 		}
 		height:100%;
 		list-style:none;
